# gemini-enterprise-nexus-agent

./: 2026-02-26_Briefing.md  Dockerfile  PLAN.md  README.md  design_doc.md  main.py  presentation_details.md  pyproject.toml  release_notes.md  requirements.md
.github/workflows/: ci.yml
.squad/: project.json
agents_registry/nexus_agent/: agent.py
src/gemini_enterprise_nexus_agent/: __init__.py
src/gemini_enterprise_nexus_agent/agents/: interfaces.py  interfaces.pyi
src/gemini_enterprise_nexus_agent/tools/: interfaces.py  interfaces.pyi
tests/: test_agents.py  test_tools.py
