[project]
name = "gemini-enterprise-nexus-agent"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.26.0",
]

[project.scripts]
gemini-enterprise-nexus-agent = "gemini_enterprise_nexus_agent:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
